@@ -1,3 +1,7 @@
+2016-08-17  c.hetherington  <cth@carlh.net>
+
+	* Scroll audio mapping view labels correctly (#919).
+
 2016-08-16  c.hetherington  <cth@carlh.net>
 
 	* Basic support for fading subtitles in and out (#923).
